Update front page: Remove multiple options, keep single entry point to dating app

--- a/index.html
+++ b/index.html
@@ -108,22 +108,16 @@
     </style>
 </head>
 <body>
-    <div class="container">
+        <div class="container">
         <h1 class="title">💕 Swindle Dating</h1>
         <p class="subtitle">Welcome to your dating experience</p>
         
         <div class="app-grid">
-            <a href="login-demo.html" class="app-card login">
-                <div class="app-icon">🔐</div>
-                <div class="app-name">Swindle Login</div>
-                <div class="app-description">Enter your dating app with phone authentication</div>
+            <a href="hinge-mvp.html" class="app-card login">
+                <div class="app-icon">❤️</div>
+                <div class="app-name">Enter Swindle</div>
+                <div class="app-description">Start your dating journey with phone authentication</div>
             </a>
         </div>
-        
-        <div class="qr-section">
-            <p style="margin-bottom: 15px; color: #666;">📱 <strong>For Mobile Access:</strong></p>
-            <a href="mobile_access.html" class="qr-link">Get QR Codes & Mobile Links</a>
-        </div>
-    </div>
 </body>
 </html>
