--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta name="description" content="Meet your perfect match with Swindle Dating - Modern dating app with age preferences and smart matching">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swindle Dating</title>
     <style>
