--- a/hinge-mvp.html
+++ b/hinge-mvp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swindler - Dating App</title>
+    <title>Swindler - Dating App | Age Preferences & Smart Matching</title>
     
     <!-- PWA Meta Tags -->
     <meta name="description" content="Meet your perfect match with Swindler - the modern dating app">
