Remove Hinge MVP option: Update app selection to show only Login Demo option, remove dating app from main menu

--- a/swindler-deployment/index.html
+++ b/swindler-deployment/index.html
@@ -30,6 +30,7 @@
             font-size: 36px;
             margin-bottom: 10px;
             background: linear-gradient(135deg, #667eea, #764ba2);
+            background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             font-weight: bold;
@@ -117,12 +118,6 @@
                 <div class="app-icon">🔐</div>
                 <div class="app-name">Login Demo</div>
                 <div class="app-description">Complete authentication system with registration flow</div>
-            </a>
-            
-            <a href="hinge-mvp.html" class="app-card dating">
-                <div class="app-icon">💕</div>
-                <div class="app-name">Hinge MVP</div>
-                <div class="app-description">Dating app with profile discovery, likes, and matching</div>
             </a>
         </div>
         
