Restore OTP-based phone login system: Users must authenticate with phone number and OTP before accessing dating app

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <h1 class="title">Swindler</h1>
         <p class="subtitle">Where hearts connect & sparks ignite</p>
         
-        <a href="hinge-mvp.html" class="enter-button" onclick="showLoading()">
+        <a href="login-demo.html" class="enter-button" onclick="showLoading()">
             Enter Swindle
         </a>
         
