--- a/login-demo.html
+++ b/login-demo.html
@@ -193,7 +193,7 @@
         // Auth0 Configuration - Replace with your actual domain and client ID
         const auth0Config = {
             domain: 'dev-ih7iq83s64ogb00i.us.auth0.com', // Your Auth0 domain
-            clientId: 'YOUR_CLIENT_ID', // You need to get this from Auth0 dashboard
+            clientId: 'PASTE_YOUR_CLIENT_ID_HERE', // Replace with your actual Client ID from Auth0
             authorizationParams: {
                 redirect_uri: window.location.origin + '/login-demo.html',
                 connection: 'sms' // Enable SMS connection
