Configure Auth0 Client ID: Enable real phone authentication with SMS OTP verification

--- a/login-demo.html
+++ b/login-demo.html
@@ -193,7 +193,7 @@
         // Auth0 Configuration - Replace with your actual domain and client ID
         const auth0Config = {
             domain: 'dev-ih7iq83s64ogb00i.us.auth0.com', // Your Auth0 domain
-            clientId: 'PASTE_YOUR_CLIENT_ID_HERE', // Replace with your actual Client ID from Auth0
+            clientId: 'To1KTVe4x8U2rhIQsHDx9Ogf3T01o5ce', // Your Auth0 Client ID
             authorizationParams: {
                 redirect_uri: window.location.origin + '/login-demo.html',
                 connection: 'sms' // Enable SMS connection
